PROJECT(lcms2)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
INCLUDE(dist.cmake)

INCLUDE_DIRECTORIES (include)

# LCMS Library
FILE(GLOB LCMS_SRCS "src/*.c" "src/*.def")
ADD_LIBRARY(lcms2 SHARED ${LCMS_SRCS})

# install
INSTALL(TARGETS lcms2  DESTINATION ${INSTALL_LIB})
INSTALL(FILES include/lcms2.h DESTINATION ${INSTALL_INC})
INSTALL(DIRECTORY doc DESTINATION ${INSTALL_DOC})
INSTALL(FILES AUTHORS COPYING ChangeLog NEWS README.1ST DESTINATION ${INSTALL_DOC})


